--- a/css/style.css
+++ b/css/style.css
@@ -19,3 +19,33 @@
     color: #20A9E5;
 }
 /* / Sezione header*/
+
+/* Formattazione tabella */
+table {
+    border-collapse: collapse;
+}
+
+thead {
+    background-color: #20A9E5;
+    color: white;
+    text-align: left;
+}
+
+.even {
+    background-color: #B1E5F2;
+}
+/* / Formattazione tabella*/
+
+/* Formattazione testi*/
+.text {
+    font-family: 'Merriweather', serif;
+}
+
+.grey {
+    color: #808080;
+}
+
+.text-highlighted {
+    background-color: yellow;
+}
+/* / Formattazione testi*/
